.env for db credentials
