# swagger.json
@@ -3,7 +3,7 @@
     "info": {
       "title": "POINTS SYSTEM API",
       "description": "A API that helps manage a points system.",
-      "version": "1.0"
+      "version": "v0"
     },
     "basePath": "/api",
     "schemes": [
@@ -72,7 +72,7 @@
           }
         }
       },
-      "/entity/<entity_id>": {
+      "/v1/entity/<entity_id>": {
         "get": {
           "summary": "Returns all entries of that entity.",
           "produces": [
@@ -101,7 +101,7 @@
           }
         }
       },
-      "/entity/<entity_id>/history": {
+      "/v1/entity/<entity_id>/history": {
         "get": {
           "summary": "Returns all points transactions per entity.",
           "produces": [
